<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cook.cook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New_Recipe">Add Recipe</string>
    <string name="app_id">326316217501738</string>
    <string name="msg_message">Welcome</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_need_an_account">Need An Account</string>
    <string name="btn_create_an_account">Create An Account</string>
    <string name="or_login_facebook">Or</string>
    <string name="txt_signup_form">Create An Account</string>
    <string name="hint_screen_name">Screen Name</string>
    <string name="hint_email">Your Email</string>
    <string name="btn_join">Join</string>
	<string-array name="navi_menus_array">
        <item>Find Stuff</item>
        <item>Home</item>
        <item>Search</item>
        <item>All Categories</item>
        <item>My favorites</item>
        <item>Whats New?</item>
        <item>Social</item>
        <item>Your Nick</item>
        <item>News Feed</item>
        <item>Account</item>
        <item>My Recipes</item>
        <item>Meal Planner</item>
        <item>Shopping List</item>
        <item>My Messages</item>
        <item>Settings</item>
        <item>Love this App?</item>
    </string-array>
    
	<!-- String for shopping list -->
    <string name="btn_remove_checked_shopping_list">Remove Checked</string>
    <string name="btn_share_checked_shopping_list">Share Checked</string>
    <string name="btn_add_item_shopping_list">Add Item</string>
    <string name="btn_select_all_shopping_list">Select All</string>
    <string name="btn_deselect_all_shopping_list">Deselect All</string>
    
    <!--  String for meal planner -->
    <string name="btn_add_new_week">Saved meal plan weeks.Press here to create a new plan.</string>
    
    <string-array name="week_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    
    <string-array name="meal_plan_array">
        <item>Breakfast</item>
        <item>MidMorning</item>
        <item>Lunch</item>
        <item>MidAfternoon</item>
        <item>Dinner</item>
    </string-array>
    
    <string-array name="action_recipe_array">
        <item>View</item>
        <item>Edit</item>
        <item>Remove</item>
    </string-array>
    <string name="APP_ID">202639699891215</string>
	<string name="album_name">CameraSample</string>
	<string-array name="action_capture_picture_array">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
     <string name="empty">No Data</string>
     
      <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
</resources>
