<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_join_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/txt_signup_form"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#a80008" />

    <EditText
        android:id="@+id/field_screen_name_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_screen_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/field_username_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_username" />

    <EditText
        android:id="@+id/field_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_email" />

    <EditText
        android:id="@+id/field_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_password" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/button_text_login"
        android:background="@drawable/login_button_at"
        android:layout_margin="20dp"
        android:text="@string/btn_join" />

</LinearLayout>
