<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
         <RelativeLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="#242424"
       android:orientation="horizontal"
       android:layout_marginBottom="5dp">
	       <Button android:id="@+id/btn_add_item_shopping_list"
	           	android:text="@string/btn_add_item_shopping_list"
	           	android:layout_height="wrap_content"
	           	android:layout_width="wrap_content"
	           	android:layout_marginTop="5dp"
	           	android:layout_marginLeft="5dp"/>
	       
	       <Button
	           android:id="@+id/btn_select_all_shopping_list"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="5dp"
	           android:layout_toRightOf="@id/btn_add_item_shopping_list"
	           android:text="@string/btn_select_all_shopping_list"/>
	       
	       <Button 
	           android:id="@+id/btn_deselect_all_shopping_list"
	          	android:text="@string/btn_deselect_all_shopping_list"
	          	android:layout_height="wrap_content"
	          	android:layout_width="wrap_content"
	          	android:layout_marginTop="5dp"
	          	android:layout_toRightOf="@id/btn_select_all_shopping_list"
	          	android:layout_marginRight="5dp"/>							
  		 </RelativeLayout>
         <ListView 
             android:id="@+id/list_shopping_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:divider="@android:color/black"
     		android:dividerHeight="1dp">
             
         </ListView>
     </LinearLayout>
        
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#242424"
        android:orientation="horizontal"
        >
        <Button android:id="@+id/btn_remove_checked_shopping_list"
            	android:text="@string/btn_remove_checked_shopping_list"
            	android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	android:layout_marginTop="5dp"
            	android:layout_marginLeft="5dp"/>
        
        <Button android:id="@+id/btn_share_checked_shopping_list"
            	android:text="@string/btn_share_checked_shopping_list"
            	android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	android:layout_marginTop="5dp"
            	android:layout_toRightOf="@id/btn_remove_checked_shopping_list"
            	android:layout_marginRight="5dp"/>
    </RelativeLayout>
</LinearLayout>
