<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_message" />

        <EditText
            android:id="@+id/field_username"
            style="@style/EditTextCookCook"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:ems="12"
            android:gravity="center_vertical"
            android:hint="@string/hint_username"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/field_password"
            style="@style/EditTextCookCook"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="12"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            style="@style/button_text_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_at"
            android:text="@string/btn_login" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_an_account"
        style="@style/button_text_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_button_at"
        android:text="@string/btn_create_an_account" />

</RelativeLayout>